--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.8.0",
     "@tailwindcss/cli": "^4.0.12",
-    "axios": "^1.8.2",
+    "axios": "^1.8.4",
+    "dom-parser": "^1.1.5",
+    "jsdom": "^26.0.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
