--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-sweetalert2": "^0.6.0",
+    "sweetalert2": "^11.17.2",
+    "sweetalert2-react": "0.8.3",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
