--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.8.4",
     "dom-parser": "^1.1.5",
     "jsdom": "^26.0.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
@@ -24,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-sweetalert2": "^0.6.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.17.2",
     "sweetalert2-react": "0.8.3",
     "sweetalert2-react-content": "^5.1.0"
